--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,6 @@ rich
 trafilatura
 
 azure-identity==1.20.0
-azure-ai-projects==1.0.0b7
+# azure-ai-projects==1.0.0b7
+azure-ai-projects==1.0.0b11
+semantic-kernel
