--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,36 @@
 flask
-openai==2.5.0
+# openai==2.5.0
+openai<2,>=1.99.0
 uuid
 python-dotenv
 azure-core
 qdrant-client
 tiktoken
-openai-agents==0.4.0
+# openai-agents==0.4.0
+openai-agents==0.3.3
 langchain
 langchain-community
 rich
 trafilatura
 
 azure-identity==1.20.0
-# azure-ai-projects==1.0.0b7
 azure-ai-projects==1.0.0b11
-agent-framework
-agent-framework[azure-ai]
 graphviz
+
+# agent-framework
+# agent-framework[azure-ai]
+
+a2a-sdk==0.3.9
+agent-framework==1.0.0b251016
+agent-framework-a2a==1.0.0b251104 #1.0.0b251016 #1.0.0b251104
+agent-framework-azure-ai==1.0.0b251104  #1.0.0b251016 #1.0.0b251104 
+agent-framework-copilotstudio==1.0.0b251104 #1.0.0b251016 #1.0.0b251104
+agent-framework-core==1.0.0b251104 #1.0.0b251001 #1.0.0b251104
+agent-framework-devui==1.0.0b251016 #1.0.0b251016 #1.0.0b251104
+agent-framework-mem0==1.0.0b251104 #1.0.0b251016 #1.0.0b251104
+agent-framework-purview==1.0.0b251104 #1.0.0b251016 #1.0.0b251104
+agent-framework-redis==1.0.0b251104 #1.0.0b251016 #1.0.0b251104
+
+microsoft-agents-activity==0.4.0
+microsoft-agents-copilotstudio-client==0.4.0
+microsoft-agents-hosting-core==0.4.0
