update .env.example file

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,50 @@
-PROJECT_ENDPOINT=https://<your-resource-name>.services.ai.azure.com/api/projects/<your-project-name>
+# Deep Research with Bing Grounding - Environment Variables
+# Copy this file to .env and fill in your values.
+
+# =============================================================================
+# NOTEBOOK 01 & 02: OpenAI Agents SDK
+# =============================================================================
+
+# Azure AI Foundry Project
+PROJECT_ENDPOINT=https://<your-resource>.services.ai.azure.com/api/projects/<your-project>
+
+# Azure OpenAI (via Foundry connection)
+AOAI_ENDPOINT=https://<your-resource>.cognitiveservices.azure.com
+AOAI_KEY=<your-api-key>
+AOAI_API_VERSION=2025-01-01-preview
+
+# Model deployments
 chatModel=gpt-4.1
+reasoningModel=o3
+
+# Bing connection (for creating agent inline)
+BING_CONNECTION_NAME=<your-bing-connection-name>
+
+# Pre-created Bing Search Agent (notebook 01 uses camelCase)
+bingSearchAgentID='asst_xxxxxxxxxxxxxxxxxxxxxxxx'
+
+# =============================================================================
+# NOTEBOOK 03: Pure Azure AI Agents
+# Additional agent IDs (create via common/create_azure_ai_agents.py)
+# =============================================================================
+
+PlannerAgentID='asst_xxxxxxxxxxxxxxxxxxxxxxxx'
+BingSearchAgentID='asst_xxxxxxxxxxxxxxxxxxxxxxxx'
+SummaryAgentID='asst_xxxxxxxxxxxxxxxxxxxxxxxx'
+ResearchAgentID='asst_xxxxxxxxxxxxxxxxxxxxxxxx'
+PeerReviewAgentID='asst_xxxxxxxxxxxxxxxxxxxxxxxx'
+
+# =============================================================================
+# NOTEBOOK 04: Agent Framework
+# Additional agent (create via maf/create_peer_review_agent_multi_choice.py)
+# =============================================================================
+
+PeerReviewAgentMultiChoiceID='asst_xxxxxxxxxxxxxxxxxxxxxxxx'
+
+# =============================================================================
+# NOTEBOOK 05: Agent Framework v2
+# Uses agent names instead of IDs. Create via common/create_azure_ai_agents_v2.py
+# =============================================================================
+
+gpt-51=gpt-5.1
+BING_CONNECTION_ID='/subscriptions/<sub-id>/resourceGroups/<rg>/providers/Microsoft.CognitiveServices/accounts/<account>/projects/<project>/connections/<connection-name>'
